<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml><project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.fathzer</groupId>
		<artifactId>parent-pom</artifactId>
		<version>1.0.8</version>
	</parent>
	<artifactId>games-core</artifactId>
	<version>0.0.9-SNAPSHOT</version>

	<name>games-core</name>
	<description>A core library to help implement two players games.</description>
	<url>https://github.com/fathzer-games/games-core</url>

	<scm>
		<url>https://github.com/fathzer-games/games-core.git</url>
		<connection>https://github.com/fathzer-games/games-core.git</connection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.organization>fathzer-games</sonar.organization>
		<check-dependencies-java-version>17</check-dependencies-java-version>
	    <maven.compiler.release>17</maven.compiler.release>
	</properties>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.1.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.bhlangonijr</groupId>
			<artifactId>chesslib</artifactId>
			<version>1.3.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>